--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </section>
 
-    <section id="apresentation">
+    <!-- <section id="apresentation">
         <div id="title">
           <h1>
             <div id="typing"></div>
@@ -29,16 +29,17 @@
         <div class="title">
             <button id="playApps" onCick="" hidden>Done</button>
         </div>
-    </section>
+    </section> -->
     
     
     <section id="home">
       <div class="content">
           <!-- The video -->
           <div id="vidBg">
-            <video loop id="myVideo" width="320" height="240">
+            <!-- <video loop id="myVideo" width="320" height="240">
                 <source src="My Video.mp4" type="video/mp4">
-            </video>
+            </video> -->
+            <iframe id="myVideo" width="900" height="506" src="https://www.youtube.com/embed/AFV0Og3K0q4?autoplay=1&mute=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <!-- Optional: some overlay text to describe the video -->
         <div class="content2">
