--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alifia Birthday</title>
     <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
@@ -39,7 +39,7 @@
             <!-- <video loop id="myVideo" width="320" height="240">
                 <source src="My Video.mp4" type="video/mp4">
             </video> -->
-            <iframe id="myVideo" width="900" height="506" src="https://www.youtube.com/embed/AFV0Og3K0q4?autoplay=1&mute=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="myVideo" width="900" height="506" src="https://www.youtube.com/embed/AFV0Og3K0q4?autoplay=1&mute=0&rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <!-- Optional: some overlay text to describe the video -->
         <div class="content2">
