--- a/cake.html
+++ b/cake.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>This is your cake</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./cakeStyle.css">
+  <link rel="stylesheet" href="./css/cakeStyle.css">
   <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
@@ -28,13 +28,6 @@
     <div class="flame"></div>
   </div>
 </div>
-<!-- 
-<h1>Blow out the candle</h1>
-<div class="cake">
-  <div class="candle">
-    <div class="flame"></div>
-  </div>
-</div> -->
 
 <label for="back" id="back" title="Go Back" onclick="goBack()">
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><g><g><path d="M492,236H68.442l70.164-69.824c7.829-7.792,7.859-20.455,0.067-28.284c-7.792-7.83-20.456-7.859-28.285-0.068    l-104.504,104c-0.007,0.006-0.012,0.013-0.018,0.019c-7.809,7.792-7.834,20.496-0.002,28.314c0.007,0.006,0.012,0.013,0.018,0.019    l104.504,104c7.828,7.79,20.492,7.763,28.285-0.068c7.792-7.829,7.762-20.492-0.067-28.284L68.442,276H492    c11.046,0,20-8.954,20-20C512,244.954,503.046,236,492,236z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
@@ -45,9 +38,9 @@
 </label>
 <!-- partial -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-<script src="./morph.js"></script> 
+<script src="./js/morph.js"></script> 
 <script src='https://unpkg.com/splitting/dist/splitting.min.js'></script>
-<script  src="./cakeScript.js"></script>
+<script  src="./js/morph.js"></script>
 
 </body>
 </html>
