--- a/rewards.html
+++ b/rewards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claim Rewards</title>
-    <link rel="stylesheet" href="rewardsStyle.css">
+    <link rel="stylesheet" href="./css/rewardsStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
