--- a/cake.html
+++ b/cake.html
@@ -40,7 +40,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 <script src="./js/morph.js"></script> 
 <script src='https://unpkg.com/splitting/dist/splitting.min.js'></script>
-<script  src="./js/morph.js"></script>
+<script  src="./js/cakeScript.js"></script>
 
 </body>
 </html>
